[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Romain Bosa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
hex = "0.4.3"
itertools = "0.10.5"
